<resources>
    <string name="app_name">Відгуки</string>

    <string name="send">Відправити</string>
    <string name="cancel">Відміна</string>

    <string name="required">Обов\'язкове поле</string>

    <string name="show_list_fragment">Список відгуків</string>
    <string name="show_feed_fragment">Залишити відгук</string>
    <string name="load_data">Завантаження данних</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_pass">Password</string>
    <string name="sign_in_login">Увійти</string>
    <string name="auth_message">Авторизація</string>
    <string name="wrong_auth">Невірний логін або пароль!</string>
    <string name="min_sumb">мін. 6 символів</string>
    <string name="wrong_email">Некоректна пошта</string>
    <string name="play_service_out_date">Для роботи додатку потрібно оновити Play Services</string>
    <string name="err_internet_connection">Перевірте інтернет підключення</string>

    <string name="count_text">Загальна к-сть: %1$d</string>

    <string name="all_feed">Всі</string>
    <string name="week_feed">Тиждень</string>
    <string name="month_feed">Місяць</string>
    <string name="year_feed">Рік</string>
    <string name="custom_feed">За період</string>

    <!-- SMILES FRAGMENT -->
    <string name="smile_text_header">Задоволені Базисмедом ?</string>
    <string name="smile_second_header">натисніть пальцем на:</string>
    <string name="bad_smile_caption">Сюди ні ногою !!!</string>
    <string name="neutral_smile_caption">Очікувала(в) кращого…</string>
    <string name="good_smile_caption">Так цілком !</string>

    <string-array name="hint_text_arr">
        <item name="bad_text">Що сталось ?</item>
        <item name="neutral_text">Що могло б бути краще ?</item>
        <item name="good_text">Яку нову послугу ви хотіли б бачити \n у нашому медичному центрі?</item>
    </string-array>

    <string-array name="answer_arr">
        <item name="bad_answer">Дякую за звернення. \n Я, директор О.Самбольський, \n прийму відповідні міри сьогодні ж !</item>
        <item name="neutral_answer">Дякуємо. Постараємось покращити \n ще до наступного Вашого візиту.</item>
        <item name="good_answer">Дякуємо. команда Базисмед \n почне надавати найбільш професійну \n допомогу по Вашій потребі якомога скоріше.</item>
    </string-array>

    <string-array name="feed_btn_text">
        <item name="bad">Прийняти міри</item>
        <item name="neutral">Покращити до наступного \n мого візиту</item>
        <item name="good">Додати послугу</item>
    </string-array>

    <string-array name="smile_description_arr">
        <item name="bad_smile_caption">Сюди ні ногою !!!</item>
        <item name="neutral_smile_caption">Очікувала(в) кращого…</item>
        <item name="good_smile_caption">Так цілком !</item>
    </string-array>

    <string-array name="smile_image_arr">
        <item name="bad_smile">@drawable/ic_angry</item>
        <item name="neutral_smile">@drawable/ic_confused</item>
        <item name="good_smile">@drawable/ic_happy</item>
    </string-array>
    <string name="feed_fragment_back">назад</string>

    <string-array name="smile_title">
        <item>Негативне</item>
        <item>Нейтральне</item>
        <item>Позитивне</item>
    </string-array>

</resources>
