<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:baselineAligned="false">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@null"
            android:padding="@dimen/logo_padding"
            android:layout_gravity="end"
            android:layout_width="@dimen/logo_size"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/img_logo"/>
        <TextView
            android:padding="@dimen/smile_header_padding"
            android:textSize="@dimen/text_smile_header"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smile_text_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
        <TextView
            android:textSize="@dimen/text_smile_header_second"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smile_second_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
    </LinearLayout>

    <!-- Smile region -->
    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ib_bad_smile"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:padding="@dimen/smile_padding_port"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_angry"/>
            <TextView
                android:textSize="@dimen/smile_caption_size"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/bad_smile_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ib_neutral_smile"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:padding="@dimen/smile_padding_port"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_confused"/>
            <TextView
                android:textSize="@dimen/smile_caption_size"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/neutral_smile_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ib_good_smile"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:padding="@dimen/smile_padding_port"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_happy"/>
            <TextView
                android:textSize="@dimen/smile_caption_size"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/good_smile_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>